--- a/index.html
+++ b/index.html
@@ -83,7 +83,43 @@
 
     <!-- Footer -->
     <footer class="footer-section">
+        <div class="footer-container">
+            <div class="footer-left">
+                <h2 class="footer-title">Future</h2>
+                <p class="footer-desc">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words
+                </p>
+                <div class="contact-details">
+                    <p>Email : <a href="mailto:info@gmail.com"> info@gmail.com </a></p>
+                    <p>Phone : <a href="tel:01500000000"> 01500 00 00 00 </a></p>
+                </div>
+                <div class="social-media">
+                    <a href="#">
+                        <img src="assets/imges/icons/fb.png" alt="Facebook URL">
+                    </a>
+                    <a href="#">
+                        <img src="assets/imges/icons/twitter.png" alt="Twitter URL">
+                    </a>
+                    <a href="#">
+                        <img src="assets/imges/icons/youtube.png" alt="Youtube URL">
+                    </a>
+                </div>
+            </div>
+            <div class="footer-right">
+                <div class="subscribe-area">
+                    <h4>Subscribe</h4>
+                    <form action="">
+                        <input type="email" name="" id="" placeholder="Enter your email" required>
+                        <input type="submit" value="Subscribe" class="subscribe-button">
+                    </form>
+                </div>
+            </div>
 
+            <div class="footer-right">
+
+            </div>
+        </div>
     </footer>
 
 </body>
