--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </div>
     </header>
     <main>
+
         <!-- About Sections -->
+
         <div class="about">
             <div class="about-content">
                 <img src="assets/imges/person.png" alt="">
@@ -47,26 +49,75 @@
             </div>
         </div>
 
-        <div class="my-plans">
-            <div class="plans">
-                <img src="assets/imges/icons/web.png" alt="">
-                <h4>Web Development</h4>
-                <p>I want to start</p>
+        <!-- My plans -->
+
+        <div class="my-plans-area">
+            <h2 class="section-title">My plans</h2>
+            <div class="my-plans">
+                <div class="plans">
+                    <img src="assets/imges/icons/web.png" alt="website image">
+                    <h4>Web Development</h4>
+                    <p>I want to start</p>
+                </div>
+                <div class="plans">
+                    <img src="assets/imges/icons/js.png" alt="javascript image">
+                    <h4>Javascript</h4>
+                    <p>I want to start</p>
+                </div>
+                <div class="plans">
+                    <img src="assets/imges/icons/smoke.png" alt="smoke image">
+                    <h4>Smoking Habit</h4>
+                    <p>I want to end</p>
+                </div>
+                <div class="plans">
+                    <img src="assets/imges/icons/ecom.png" alt="ecommerce">
+                    <h4>ecommerce</h4>
+                    <p>I want to develop</p>
+                </div>
             </div>
-            <div class="plans">
-                <img src="assets/imges/icons/js.png" alt="">
-                <h4>Javascript</h4>
-                <p>I want to start</p>
-            </div>
-            <div class="plans">
-                <img src="assets/imges/icons/smoke.png" alt="">
-                <h4>Smoking Habit</h4>
-                <p>I want to end</p>
-            </div>
-            <div class="plans">
-                <img src="assets/imges/icons/ecom.png" alt="">
-                <h4>ecommerce</h4>
-                <p>I want to develop</p>
+        </div>
+
+        <!-- Pricing Plans -->
+
+        <div class="pricing-plans-area">
+            <h2 class="section-title">Pricing & Packages</h2>
+            <div class="pricing-plans">
+                <div class="pricing-down">
+                    <h5>basic plan</h5>
+                    <h3><sup>£</sup>49K</h3>
+                    <ul>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular belief</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular belief.</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular belief</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular simply.</li>
+                    </ul>
+                    <button class="pricing-button">get started</button>
+                </div>
+                <div class="pricing">
+                    <h5>beginner plan</h5>
+                    <h3><sup>£</sup>79K</h3>
+                    <ul>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular belief</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular belief.</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular belief</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular simply.</li>
+                    </ul>
+                    <button class="pricing-button">get started</button>
+                </div>
+                <div class="pricing-down">
+                    <h5>premium plan</h5>
+                    <h3><sup>£</sup>109K</h3>
+                    <ul>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular belief</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular belief.</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular belief</li>
+                        <li><i class="fa-solid fa-check"></i> Contrary to popular simply.</li>
+                    </ul>
+                    <button class="pricing-button">get started</button>
+                </div>
             </div>
         </div>
 
@@ -82,6 +133,7 @@
     </main>
 
     <!-- Footer -->
+
     <footer class="footer-section">
         <div class="footer-container">
             <div class="footer-left">
