Final Final Final

--- a/index.html
+++ b/index.html
@@ -20,24 +20,26 @@
             <div class="banner-content">
                 <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
                 <p class="banner-desc">There are many variations of passages of Lorem Ipsum available, but the majority
-                    have suffered
-                    alteration in some form, by injected humour, or randomised words</p>
+                    have suffered alteration in some form, by injected humour, or randomised words</p>
                 <button class="primary-button">contact us</button>
             </div>
         </div>
     </header>
+
+    <!-- Main part started -->
+
     <main>
 
         <!-- About Sections -->
 
         <div class="about">
             <div class="about-content">
-                <img src="assets/imges/person.png" alt="">
+                <img src="assets/imges/person.png" alt="About section image">
                 <div>
                     <h2 class="section-title">My failures of previous year</h2>
                     <p class="about-desc">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
-                        roots in a piece of
-                        classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                        roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                        Richard McClintock.</p>
                     <ul>
                         <li><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</li>
                         <li><i class="fa-solid fa-check"></i> Contrary to popular belief.</li>
@@ -84,7 +86,7 @@
             <div class="pricing-plans">
                 <div class="pricing-down">
                     <h5>basic plan</h5>
-                    <h3><sup>£</sup>49K</h3>
+                    <h3><sup>£</sup>50</h3>
                     <ul>
                         <li><i class="fa-solid fa-check"></i> Contrary to popular belief</li>
                         <li><i class="fa-solid fa-check"></i> Contrary to popular belief.</li>
@@ -96,7 +98,7 @@
                 </div>
                 <div class="pricing">
                     <h5>beginner plan</h5>
-                    <h3><sup>£</sup>79K</h3>
+                    <h3><sup>£</sup>80</h3>
                     <ul>
                         <li><i class="fa-solid fa-check"></i> Contrary to popular belief</li>
                         <li><i class="fa-solid fa-check"></i> Contrary to popular belief.</li>
@@ -108,7 +110,7 @@
                 </div>
                 <div class="pricing-down">
                     <h5>premium plan</h5>
-                    <h3><sup>£</sup>109K</h3>
+                    <h3><sup>£</sup>110</h3>
                     <ul>
                         <li><i class="fa-solid fa-check"></i> Contrary to popular belief</li>
                         <li><i class="fa-solid fa-check"></i> Contrary to popular belief.</li>
@@ -166,10 +168,6 @@
                         <input type="submit" value="Subscribe" class="subscribe-button">
                     </form>
                 </div>
-            </div>
-
-            <div class="footer-right">
-
             </div>
         </div>
     </footer>
